# exam-tutor

./: .env.example  .gitignore  Dockerfile  EPIC_3_2_SUMMARY.md  EPIC_3_3_SUMMARY.md  EPIC_3_4_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PHASE_3_SUMMARY.md  PHASE_4_SUMMARY.md  PHASE_5_SUMMARY.md  QUICK_REFERENCE.md  README.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
config/alertmanager/: alertmanager.yml
config/prometheus/: alerts.yml  prometheus.yml
docker/: Dockerfile
docs/: PHASE_5_PLAN.md  epic_1_ai_tutor_architecture.md  epic_3_1_offline_capability.md  epic_3_2_testing_qa.md  epic_3_3_monitoring.md  epic_3_4_kubernetes_deployment.md  epic_4_1_alpha_testing.md  epic_4_2_beta_testing.md
growth/automation/: onboarding_workflows.py
growth/operations/: phase5_dashboard.py
growth/partnerships/: partnership_manager.py
growth/recruitment/: school-recruitment-playbook.md
growth/tracking/: regional-rollout-tracker.py
helm/examstutor-api/: Chart.yaml  values.yaml
k8s/base/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
pilot-testing/alpha/: bug-report-template.md  test-accounts.yaml  test-scenarios.md
pilot-testing/analytics/: usage-tracking.py
pilot-testing/beta/: pilot-school-selection.md
pilot-testing/surveys/: student-survey.md  teacher-survey.md
pilot-testing/training/: student-onboarding.md  teacher-training-guide.md
scripts/: build_and_push.sh  deploy.sh  rollback.sh  run_tests.py  start_monitoring.sh  test_epic_3_1.py
src/ai/: __init__.py  ai_tutor_service.py  context_manager.py  embeddings_service.py  evaluation_service.py  finetuning_service.py  model_router.py  openai_service.py  rag_optimizer.py  rag_service.py  response_optimizer.py  vector_store.py
src/api/: auth.py  main.py  models.py
src/cache/: __init__.py  ai_response_cache.py  redis_cache.py
src/core/: audit.py  business_model.py  config.py  data_retention.py  encryption.py  health.py  logger.py  monitoring.py  tracing.py
src/database/: __init__.py  config.py  crud.py  models.py
src/logging/: __init__.py  config.py
src/middleware/: __init__.py  rate_limiter.py  security.py
src/monitoring/: __init__.py  metrics.py
src/payments/: paystack_integration.py
src/tasks/: __init__.py  ai_tasks.py  analytics_tasks.py  celery_app.py  email_tasks.py  feedback_tasks.py
tests/: conftest.py
tests/integration/: test_complete_workflow.py
(+44 files in other folders)
